# Hackathon-II-The-Evolution-of-Todo-Mastering-Spec-Driven-Development-Cloud-Native-AI

.github/workflows/: phase3.yml
evolution-of-todo/phase 1/: README.md  pyproject.toml
evolution-of-todo/phase 1/.specify/memory/: constitution.md
evolution-of-todo/phase 1/history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
evolution-of-todo/phase 1/history/prompts/todo-console-app/: 2-create-feature-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-create-implementation-tasks.tasks.prompt.md  5-analyze-and-update-project.analysis.prompt.md  6-implement-todo-application.implementation.prompt.md
evolution-of-todo/phase 1/specs/1-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
evolution-of-todo/phase 1/specs/1-todo-console-app/checklists/: requirements.md
evolution-of-todo/phase 1/src/: cli.py  exceptions.py  main.py  models.py  todo.py
evolution-of-todo/phase 1/src/todo_console_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
evolution-of-todo/phase 1/tests/: test_cli.py  test_models.py  test_todo.py
evolution-of-todo/phase 2/.claude/: settings.local.json
evolution-of-todo/phase 2/backend/: README.md  (+1 more)
evolution-of-todo/phase 3/: .env.example  Chatkit-SDK-Documentation.md  INVESTIGATION-SUMMARY.md  NEXT-STEPS.md  README.md  skills.md  test_auth_connection.js
evolution-of-todo/phase 4/: .env.example  .gitignore  BUILD_VARIABLES_GUIDE.txt  IMPLEMENTATION-SUMMARY.md  OpenAI-Agents-SDK-Knowledge.md  PHASE4-SUMMARY-REPORT.md  README.md  docker-compose.yml
(+344 files in other folders)
