[project]
name = "todo-console-app"
version = "0.1.0"
description = "Phase I In-Memory Python Console Todo Application"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
